# mcp-games-public

./: .gitignore  DEPLOYMENT.md  LICENSE  README.md  ai_state_view.py  ai_usage_demo.py  claude_desktop_config.json  demo.py  http_test_server.py  list_all_tools.py  main.py  manual_test.py  memory_demo.py  pyproject.toml  quick_test.py  requirements.txt  run_with_viewer.py  show_ai_tools.py  simple_demo.py  test_breakout.py  test_common_servers.py  test_deployed_server.py  test_fastmcp.py  test_gymnasium.py  test_marketplace_proper.py  test_marketplace_tools.py  test_proper_dedalus.py  test_server.py  test_specific_tools.py
src/: main.py  web_viewer.py
src/games/: __init__.py  blackjack.py  breakout.py  cartpole.py  chess_game.py  connect_four.py  frozen_lake.py  gymnasium_game.py  mountain_car.py  pettingzoo_chess.py  pettingzoo_game.py  registry.py  taxi.py  tic_tac_toe.py  types.py
